[gd_scene load_steps=8 format=3 uid="uid://clcnuqypasai5"]

[ext_resource type="Texture2D" uid="uid://dbfci64476ubs" path="res://assets/glowing shine thingy circle.png" id="1_oq5no"]
[ext_resource type="Script" path="res://scripts/catch_fish_screen.gd" id="1_qn4mn"]
[ext_resource type="Texture2D" uid="uid://2cxq7ic4nruv" path="res://assets/fishpixelart.png" id="3_374ey"]

[sub_resource type="Animation" id="Animation_inis0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Control/VBoxContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Control/Fish:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/Control/GlowyThingy:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/Control/Fish:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/Control/Fish:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CanvasLayer/Control/GlowyThingy:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CanvasLayer/Control/Panel:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_bmbo1"]
resource_name = "catch_fish_screen"
length = 4.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(4),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Control/VBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 3, 4),
"transitions": PackedFloat32Array(1, 1, 0.707107, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.960784), Color(1, 1, 1, 0.960784), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/Control/Fish:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 3.33333, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/Control/GlowyThingy:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.166667, 3.9),
"transitions": PackedFloat32Array(1, 0.707107, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/Control/Fish:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.261799, 0.261799]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CanvasLayer/Control/Fish:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5, 3.03333, 4),
"transitions": PackedFloat32Array(0.535887, 0.535887, 0.812252, 0.535887),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.5, 1.5), Vector2(1, 1), Vector2(0.7, 0.7)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CanvasLayer/Control/GlowyThingy:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0472, -1.0472]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CanvasLayer/Control/Panel:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.2, 1.23333, 3.96667),
"transitions": PackedFloat32Array(1, 1, 0.450625, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0.211765), Color(1, 1, 1, 0.211765), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4nexh"]
_data = {
"RESET": SubResource("Animation_inis0"),
"catch_fish_screen": SubResource("Animation_bmbo1")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_05of8"]
bg_color = Color(0, 0, 0, 1)

[node name="catch_fish_screen" type="Node2D"]
script = ExtResource("1_qn4mn")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4nexh")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
z_index = 99
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Panel" type="Panel" parent="CanvasLayer/Control"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_05of8")

[node name="GlowyThingy" type="TextureRect" parent="CanvasLayer/Control"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(1000, 1000)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -500.0
offset_top = -500.0
offset_right = 500.0
offset_bottom = 500.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(500, 500)
mouse_filter = 2
texture = ExtResource("1_oq5no")

[node name="Fish" type="TextureRect" parent="CanvasLayer/Control"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(185, 185)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.5
offset_top = -92.5
offset_right = 92.5
offset_bottom = 92.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(92, 92)
mouse_filter = 2
texture = ExtResource("3_374ey")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -757.0
offset_top = 68.0
offset_right = 757.0
offset_bottom = 495.0
grow_horizontal = 2
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Control/VBoxContainer"]
texture_filter = 2
layout_mode = 2
mouse_filter = 2
theme_override_constants/outline_size = 7
theme_override_font_sizes/bold_italics_font_size = 60
theme_override_font_sizes/italics_font_size = 60
theme_override_font_sizes/mono_font_size = 60
theme_override_font_sizes/normal_font_size = 60
theme_override_font_sizes/bold_font_size = 60
bbcode_enabled = true
text = "[center][wave]You caught"
fit_content = true
scroll_active = false

[node name="RarityText" type="RichTextLabel" parent="CanvasLayer/Control/VBoxContainer"]
texture_filter = 2
layout_mode = 2
mouse_filter = 2
theme_override_constants/outline_size = 6
theme_override_font_sizes/bold_italics_font_size = 30
theme_override_font_sizes/italics_font_size = 30
theme_override_font_sizes/mono_font_size = 30
theme_override_font_sizes/normal_font_size = 30
theme_override_font_sizes/bold_font_size = 30
bbcode_enabled = true
text = "[center]Common"
fit_content = true

[node name="WeightText" type="RichTextLabel" parent="CanvasLayer/Control/VBoxContainer"]
texture_filter = 2
layout_mode = 2
mouse_filter = 2
theme_override_constants/outline_size = 6
theme_override_font_sizes/bold_italics_font_size = 25
theme_override_font_sizes/italics_font_size = 25
theme_override_font_sizes/mono_font_size = 25
theme_override_font_sizes/normal_font_size = 25
theme_override_font_sizes/bold_font_size = 25
bbcode_enabled = true
text = "[center]999kg"
fit_content = true
